--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: #CCDDEE;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-family: sans-serif;
+    color: #b19cd9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.section {
+    background-color: #ffffff;
+    border: solid 3px grey;
+    margin: 4px;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: left;
+    font-size: 40px;
+    color: #ff6961;
+}
+
+.weekday-title {
+    align-items: flex-end;
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    border-right: solid 3px lightgrey;
 }
